--- a/README
+++ b/README
@@ -6,9 +6,67 @@ Sonic Annotator is a utility program for batch feature extraction from
 audio files.  It runs Vamp audio analysis plugins on audio files, and
 can write the result features in a selection of formats.
 
+For more information, see
+
+  http://www.omras2.org/SonicAnnotator
+
+More documentation follows further down this README file, after the
+credits.
+
+
+Credits
+-------
+
+Sonic Annotator was developed at the Centre for Digital Music,
+Queen Mary, University of London.
+
+  http://www.elec.qmul.ac.uk/digitalmusic/
+
+The main program is by Mark Levy, Chris Cannam, and Chris Sutton.
+Sonic Annotator incorporates library code from the Sonic Visualiser
+application by Chris Cannam.  Code copyright 2005-2007 Chris Cannam,
+copyright 2006-2008 Queen Mary, University of London, except where
+indicated in the individual source files.
+
+This work was funded by the Engineering and Physical Sciences Research
+Council through the OMRAS2 project EP/E017614/1.
+
+Sonic Annotator is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License as
+published by the Free Software Foundation; either version 2 of the
+License, or (at your option) any later version.  See the file COPYING
+included with this distribution for more information.
+
+Sonic Annotator may also make use of the following libraries:
+
+ * Qt4 -- Copyright Nokia Corporation, distributed under the GPL
+ * Ogg decoder -- Copyright CSIRO Australia, BSD license
+ * MAD mp3 decoder -- Copyright Underbit Technologies Inc, GPL
+ * libsamplerate -- Copyright Erik de Castro Lopo, GPL
+ * libsndfile -- Copyright Erik de Castro Lopo, LGPL
+ * FFTW3 -- Copyright Matteo Frigo and MIT, GPL
+ * Vamp plugin SDK -- Copyright Chris Cannam, BSD license
+ * Redland RDF libraries -- Copyright Dave Beckett and the University of Bristol, LGPL/Apache license
+
+(Some distributions of Sonic Annotator may have one or more of these
+libraries statically linked.)  Many thanks to their authors.
+
+Sonic Annotator can also use QuickTime for audio file import on OS/X.
+For licensing reasons, you may not distribute binaries of Sonic
+Annotator with QuickTime support included for any platform that does
+not include QuickTime as part of the platform itself (see section 3 of
+version 2 of the GNU General Public License).
+
+
+Compiling Sonic Annotator
+--------------------------
+
+If you are planning to compile Sonic Annotator from source code,
+please read the file INSTALL.
+
 
 A Quick Tutorial
-----------------
+================
 
 To use Sonic Annotator, you need to tell it three things: what audio
 files to extract features from; what features to extract; and how and
