--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,20 @@
 
+Changes in Sonic Annotator 0.6 since the previous release 0.5:
+
+Build changes:
+
+ - Switch to modular SV-libraries build using svcore library
+ - Add autoconf configure script
+
+Front-end changes:
+
+ - Pick up default sample rate and channel count from the first
+ audio file, where not specified in the transform, instead of using
+ hard coded defaults
+ - Fix the --csv-one-file option which did not work in 0.5
+ - Fix --force option when using playlists
+ - Add -v option to print version number and exit
+
 Changes in Sonic Annotator 0.5 since the previous release 0.4:
 
 Build changes:
