Update changelog and readme; remove out-of-date install file

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 
 Changes in Sonic Annotator 1.0 since the previous release 0.7:
 
+Bug fixes:
+
  - Fix incorrect samplerate in reading m4a files on OS/X
  - Fix incorrect handling of FixedSampleRate outputs (Vamp SDK fix)
  - Add tests that use the Vamp test plugin
