--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,18 @@ Front-end changes:
  - Add support for the start time and duration properties of a
    transform, applying a plugin to only a range of the input audio
  - Add --normalise to request each audio file be normalised to 1.0 max
- - Add --multiplex 
+ - Add --multiplex option to compose multiple audio files into a
+   single multi-channel stream with one input file per channel
+ - Add --minversion option to permit scripts to check that the
+   version of Sonic Annotator is as they expect
+
+Bug fixes:
+
+ - Fix the former habit of forging ahead even if not all transform
+   files could be found or parsed (this may have been intentional
+   behaviour but it is confusing more than it is useful)
+ - Fix failure to support --summary-only flag when reading transforms
+   with summaries from a transform file
 
 Changes in Sonic Annotator 1.0 since the previous release 0.7:
 
