--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,25 @@
+
+Changes in Sonic Annotator 1.4 since the previous release 1.3:
+
+Front-end changes:
+
+ - Better error reporting, especially for invalid transform files
+   and transform-not-found
+
+ - Avoid crashing out when a single plugin (that is not being used)
+   can't be loaded because of e.g. an undefined symbol
+
+Bug fixes:
+
+ - Fix (with test) horrible crash with --multiplex option
+
+ - Fix erroneous quantization to 16 bits for coded file types of
+   greater bit depth
+
+ - Fix multiple outputs when requesting both summary and non-summary
+   for the same output
+
+
 Changes in Sonic Annotator 1.3 since the previous release 1.2:
 
 Back-end (feature writer) changes:
