--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 
-Changes in Sonic Annotator 1.5 since the previous release 1.4:
+Changes in Sonic Annotator 1.5 (25 May 2017) since the previous release 1.4:
 
 Front-end changes:
 
@@ -14,7 +14,7 @@ Front-end changes:
 
  - Add --transform-minversion flag to test for available version of
    a plugin transform
- 
+
  - Add quiet mode (-q)
 
 Bug fixes:
@@ -25,7 +25,7 @@ Bug fixes:
    conditions
 
 
-Changes in Sonic Annotator 1.4 since the previous release 1.3:
+Changes in Sonic Annotator 1.4 (18 Mar 2016) since the previous release 1.3:
 
 Front-end changes:
 
@@ -46,7 +46,7 @@ Bug fixes:
    for the same output
 
 
-Changes in Sonic Annotator 1.3 since the previous release 1.2:
+Changes in Sonic Annotator 1.3 (05 Nov 2015) since the previous release 1.2:
 
 Back-end (feature writer) changes:
 
@@ -60,7 +60,7 @@ Back-end (feature writer) changes:
    cut-and-pasting command lines and I was quite baffled at first)
 
 
-Changes in Sonic Annotator 1.2 since the previous release 1.1:
+Changes in Sonic Annotator 1.2 (01 Sep 2015) since the previous release 1.1:
 
 Front-end changes:
 
@@ -75,28 +75,36 @@ Back-end (feature writer) changes:
 Bug fixes:
 
  - Fix invalid JSON written by JAMS feature writer for dense
-   features.
+   features
+
  - Fix invalid UTF-8 output from RDF feature writer when processing
    MP3 files having ID3 tags in non-ASCII, non-UTF8 encodings
 
 
-Changes in Sonic Annotator 1.1 since the previous release 1.0:
+Changes in Sonic Annotator 1.1 (16 Oct 2014) since the previous release 1.0:
 
 Front-end changes:
 
  - Add support for the start time and duration properties of a
    transform, applying a plugin to only a range of the input audio
+
  - Reduce the internal processing blocksize from 16384 to 1024 samples
    to reduce extent of time rounding at end of file or range
+
  - Add --multiplex option to compose multiple audio files into a
    single multi-channel stream with one input file per channel
+
  - Add --normalise to request each audio file be normalised to 1.0 max
+
  - Add support for the plugin_version property of a transform, causing
    Sonic Annotator to refuse to run with the wrong version of a plugin
+
  - Add --minversion option to permit scripts to check that the
    version of Sonic Annotator is as they expect
+
  - Add new housekeeping options to list the available feature writers
    and supported audio file formats
+
  - Pull out the feature-writer-specific help text into separate help
    options (-h <writertype>) as the help was getting too long
 
@@ -105,11 +113,14 @@ Back-end (feature writer) changes:
  - Add --csv-omit-filename, --csv-end-times, and --csv-fill-ends
    options to the CSV feature writer to adjust various aspects of its
    output
+
  - Add "json" feature writer, exporting to JAMS (JSON Annotated Music
    Specification) format. This writer is provisional and is expected
    to change in future releases to comply more effectively with the
    specification
+
  - Add "midi" feature writer, exporting to MIDI files
+
  - Add "lab" feature writer, exporting to tab-separated label files.
    (This is equivalent to using the CSV writer with a tab separator and
    the new --csv-omit-filename and --csv-end-times options, but it's
@@ -120,20 +131,23 @@ Bug fixes:
  - Fix the former habit of forging ahead even if not all transform
    files could be found or parsed (this may have been intentional
    behaviour but it is confusing more than it is useful)
+
  - Fix failure to support --summary-only flag when reading transforms
    with summaries from a transform file
 
 
-Changes in Sonic Annotator 1.0 since the previous release 0.7:
+Changes in Sonic Annotator 1.0 (09 May 2013) since the previous release 0.7:
 
 Bug fixes:
 
  - Fix incorrect samplerate in reading m4a files on OS/X
+
  - Fix incorrect handling of FixedSampleRate outputs (Vamp SDK fix)
+
  - Add tests that use the Vamp test plugin
 
 
-Changes in Sonic Annotator 0.7 since the previous release 0.6:
+Changes in Sonic Annotator 0.7 (17 Jul 2012) since the previous release 0.6:
 
 Build changes:
 
@@ -145,12 +159,14 @@ Build changes:
    directly. Release builds use Sord/Serd rather than Redland
 
 
-Changes in Sonic Annotator 0.6 since the previous release 0.5:
+Changes in Sonic Annotator 0.6 (28 Sep 2011) since the previous release 0.5:
 
 Build changes:
 
  - Switch to modular SV-libraries build using svcore library
+
  - We now require Vamp plugin SDK v2.3
+
  - Add autoconf configure script
 
 Front-end changes:
@@ -158,13 +174,17 @@ Front-end changes:
  - Pick up default sample rate and channel count from the first
  audio file, where not specified in the transform, instead of using
  hard coded defaults
+
  - Make it possible to specify the window shape in transform
+
  - Fix the --csv-one-file option which did not work in 0.5
+
  - Fix --force option when using playlists
+
  - Add -v option to print version number and exit
 
 
-Changes in Sonic Annotator 0.5 since the previous release 0.4:
+Changes in Sonic Annotator 0.5 (26 May 2010) since the previous release 0.4:
 
 Build changes:
 
@@ -173,13 +193,15 @@ Build changes:
 Front-end changes:
 
  - Avoid leaking file descriptors on exceptions
+
  - Fix embarrassing bug that caused failure to mix down to mono
  properly for single-channel plugins with multi-channel input files
+
  - Fail sooner if the output file is not writable (i.e. don't wait
  until the first data is available for writing)
 
 
-Changes in Sonic Annotator 0.4 since the previous release 0.3:
+Changes in Sonic Annotator 0.4 (25 Sep 2009) since the previous release 0.3:
 
 Build changes:
 
@@ -205,12 +227,13 @@ CSV back-end (feature writer) changes:
  until the end and risk running out of file descriptors.  This was
  already the behaviour of the RDF writer, the CSV one has just been
  updated to match it.
+
  - The behaviour of the CSV writer has also been changed to match
  that of the RDF writer in handling file write failures (it now
  continues processing only if --force is given).
 
 
-Changes in Sonic Annotator 0.3 since the previous release 0.2:
+Changes in Sonic Annotator 0.3 (07 Jul 2007) since the previous release 0.2:
 
 Front-end changes:
 
